# digittech_classify

./: .gitignore  pyproject.toml  requirements.txt
digitech_classify/: Makefile  README.md  cd.py  pyproject.toml
digitech_classify/models/: LregModel_v1.joblib  mlp_multilabel_v1.joblib  mlp_multilabel_v1_metadata.joblib  oneVrest_logreg_v1.joblib  oneVrest_logreg_v1__mlb.joblib  random_forest_v1_metadata.joblib
digitech_classify/notebooks/: clean_cb_data.ipynb  enrich_training_set.ipynb  make_embeddings.ipynb  make_training_set.ipynb  optimise_labels.ipynb  process_keywords.ipynb  similarity_search.ipynb  train_model.ipynb  transformer_embeddings.ipynb
digitech_classify/pipeline/: config.py  dataset.py  features.py  plots.py
digitech_classify/pipeline/data_engineering/: add_zero_label.py  embed_training_set.py  features.py  glass_AI_overlap_labelled.py  keywords.py  merge_pred.py  multilabel.py  pool_vectors.py  semantic_search.py  transformer_embeddings.py  visualise_labels.py
digitech_classify/pipeline/modeling/: embed_training_set.py  multilabel.py  optimise_threshold.py  predict.py  train.py  train_mlp.py
digitech_classify/reports/figures/: pca.py
